--- a/rosey/translations/de-de.yaml
+++ b/rosey/translations/de-de.yaml
@@ -28,88 +28,84 @@ _inputs:
   About:
     label: About
     type: text
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=About)
-      | [Test](https://moving-mule.cloudvent.net/test#:~:text=About)"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=About) |
+      [Test](http://localhost:1313/test#:~:text=About)"
   Blog:
     label: Blog
     type: text
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=Blog)
-      | [Test](https://moving-mule.cloudvent.net/test#:~:text=Blog)"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=Blog) |
+      [Test](http://localhost:1313/test#:~:text=Blog)"
   Contact:
     label: Contact
     type: text
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=Conta\
-      ct) | [Test](https://moving-mule.cloudvent.net/test#:~:text=Contact)"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=Contact) |
+      [Test](http://localhost:1313/test#:~:text=Contact)"
   Feature:
     label: Feature
     type: text
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=Featu\
-      re) | [Test](https://moving-mule.cloudvent.net/test#:~:text=Feature)"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=Feature) |
+      [Test](http://localhost:1313/test#:~:text=Feature)"
   Home:
     label: Home
     type: text
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=Home)
-      | [Test](https://moving-mule.cloudvent.net/test#:~:text=Home)"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=Home) |
+      [Test](http://localhost:1313/test#:~:text=Home)"
   Pricing:
     label: Pricing
     type: text
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=Prici\
-      ng) | [Test](https://moving-mule.cloudvent.net/test#:~:text=Pricing)"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=Pricing) |
+      [Test](http://localhost:1313/test#:~:text=Pricing)"
   a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configuration:
     label: A demonstration of how Hugo and Rosey work in CloudCannon. This site has
       extra setup so that we can enter translations via the CloudCannon GUI.
       Additional languages can be set in the environment variables in
       CloudCannon’s build configuration.
     type: textarea
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=A%20d\
-      emonstration%20of%20how%20Hugo%20and%20Rosey%20work%20in%20CloudCannon.%2\
-      0This%20site%20has%20extra%20setup%20so%20that%20we%20can%20enter%20trans\
-      lations%20via%20the%20CloudCannon%20GUI.%20Additional%20languages%20can%2\
-      0be%20set%20in%20the%20environment%20variables%20in%20CloudCannon’s%20bui\
-      ld%20configuration.)"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=A%20demonstration\
+      %20of%20how%20Hugo%20and%20Rosey%20work%20in%20CloudCannon.%20This%20site\
+      %20has%20extra%20setup%20so%20that%20we%20can%20enter%20translations%20vi\
+      a%20the%20CloudCannon%20GUI.%20Additional%20languages%20can%20be%20set%20\
+      in%20the%20environment%20variables%20in%20CloudCannon’s%20build%20configu\
+      ration.)"
   hugo-rosey-demo:
     label: Hugo Rosey Demo
     type: text
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=Hugo%\
-      20Rosey%20Demo)"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=Hugo%20Rosey%20Demo)"
   keep-what-you-need-delete-the-rest-changed:
     label: Keep what you need. Delete the rest. CHANGED
     type: textarea
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=Keep%\
-      20what%20you%20need.%20Delete%20the%20rest.%20CHANGED)"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=Keep%20what%20you\
+      %20need.%20Delete%20the%20rest.%20CHANGED)"
   make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey:
     label: Make your own copy of this repository. Reference it or use it as a
       template to get up and running with translation workflows in CloudCannon
       using Rosey.
     type: textarea
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=Make%\
-      20your%20own%20copy%20of%20this%20repository.%20Reference%20it%20or%20use\
-      %20it%20as%20a%20template%20to%20get%20up%20and%20running%20with%20transl\
-      ation%20workflows%20in%20CloudCannon%20using%20Rosey.)"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=Make%20your%20own\
+      %20copy%20of%20this%20repository.%20Reference%20it%20or%20use%20it%20as%2\
+      0a%20template%20to%20get%20up%20and%20running%20with%20translation%20work\
+      flows%20in%20CloudCannon%20using%20Rosey.)"
   read-more:
     label: "\n    Read More\n  "
     type: text
     comment: |-
-      [Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=
+      [Homepage](http://localhost:1313/index.html#:~:text=
       %20%20%20%20Read%20More
       %20%20)
   site-title:
     label: Hugo Rosey Demo
     type: text
-    comment: "[Homepage](https://moving-mule.cloudvent.net/index.html#:~:text=Hugo%\
-      20Rosey%20Demo) |
-      [Test](https://moving-mule.cloudvent.net/test#:~:text=Hugo%20Rosey%20Demo\
-      )"
+    comment: "[Homepage](http://localhost:1313/index.html#:~:text=Hugo%20Rosey%20De\
+      mo) | [Test](http://localhost:1313/test#:~:text=Hugo%20Rosey%20Demo)"
   test-richardson-here:
     label: Test richardson here
     type: textarea
-    comment: "[Test](https://moving-mule.cloudvent.net/test#:~:text=Test%20richards\
-      on%20here)"
+    comment: "[Test](http://localhost:1313/test#:~:text=Test%20richardson%20here)"
   this-is-a-new-hero-for-testing-purposes:
     label: This is a new hero for testing purposes
     type: textarea
-    comment: "[Test](https://moving-mule.cloudvent.net/test#:~:text=This%20is%20a%2\
-      0new%20hero%20for%20testing%20purposes)"
+    comment: "[Test](http://localhost:1313/test#:~:text=This%20is%20a%20new%20hero%\
+      20for%20testing%20purposes)"
 Blog: Blog
 Contact: Kontakt
 Feature: Besonderheit
