--- a/rosey/translations/es-es.yaml
+++ b/rosey/translations/es-es.yaml
@@ -86,9 +86,7 @@ _inputs:
     label: "\n    Read More\n  "
     type: text
     comment: |-
-      [Homepage](https://rugged-mandolin.cloudvent.net/index.html#:~:text=
-      %20%20%20%20Read%20More
-      %20%20)
+      [Homepage](https://rugged-mandolin.cloudvent.net/index.html#:~:text=Read%20More)
   site-title:
     label: Hugo Rosey Demo
     type: text
