--- a/rosey/translations/de-de.yaml
+++ b/rosey/translations/de-de.yaml
@@ -1,4 +1,9 @@
-About: Um
+a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configuration:
+  Eine Demonstration, wie Hugo und Rosey in CloudCannon arbeiten. Diese Site
+  verfügt über eine zusätzliche Einrichtung, damit wir Übersetzungen über die
+  CloudCannon-GUI eingeben können. Zusätzliche Sprachen können in den
+  Umgebungsvariablen in der Build-Konfiguration von CloudCannon festgelegt
+  werden.
 _inputs:
   $:
     type: object
@@ -9,48 +14,15 @@ _inputs:
           comment: Content to be translated
           inputs:
             - make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey
+            - odCqOyfzfx8+0x9yxU7KiHRnYpNBFRibhMjQTdF6UNI
         - heading: Translated
           comment: Content already translated
           inputs:
-            - About
-            - Blog
-            - Contact
-            - Feature
-            - Home
-            - Pricing
             - a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configuration
             - hugo-rosey-demo
             - keep-what-you-need-delete-the-rest
             - read-more
             - site-title
-  About:
-    label: About
-    type: text
-    comment: "[Homepage](https://rugged-mandolin.cloudvent.net/index.html#:~:text=A\
-      bout)"
-  Blog:
-    label: Blog
-    type: text
-    comment: "[Homepage](https://rugged-mandolin.cloudvent.net/index.html#:~:text=Blog)"
-  Contact:
-    label: Contact
-    type: text
-    comment: "[Homepage](https://rugged-mandolin.cloudvent.net/index.html#:~:text=C\
-      ontact)"
-  Feature:
-    label: Feature
-    type: text
-    comment: "[Homepage](https://rugged-mandolin.cloudvent.net/index.html#:~:text=F\
-      eature)"
-  Home:
-    label: Home
-    type: text
-    comment: "[Homepage](https://rugged-mandolin.cloudvent.net/index.html#:~:text=Home)"
-  Pricing:
-    label: Pricing
-    type: text
-    comment: "[Homepage](https://rugged-mandolin.cloudvent.net/index.html#:~:text=P\
-      ricing)"
   a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configuration:
     label: A demonstration of how Hugo and Rosey work in CloudCannon. This site has
       extra setup so that we can enter translations via the CloudCannon GUI.
@@ -82,6 +54,10 @@ _inputs:
       ake%20your%20own%20copy%20of%20this%20repository.%20Reference%20it%20or%2\
       0use%20it%20as%20a%20template%20to%20get%20up%20and%20running%20with%20tr\
       anslation%20workflows%20in%20CloudCannon%20using%20Rosey.)"
+  odCqOyfzfx8+0x9yxU7KiHRnYpNBFRibhMjQTdF6UNI:
+    label: ""
+    type: text
+    comment: "[Homepage](https://rugged-mandolin.cloudvent.net/index.html#:~:text=)"
   read-more:
     label: Read More
     type: text
@@ -92,19 +68,9 @@ _inputs:
     type: text
     comment: "[Homepage](https://rugged-mandolin.cloudvent.net/index.html#:~:text=H\
       ugo%20Rosey%20Demo)"
-Blog: Blog
-Contact: Kontakt
-Feature: Besonderheit
-Home: Heim
-Pricing: Preisgestaltung
-a-demonstration-of-how-hugo-and-rosey-work-in-cloudcannon-this-site-has-extra-setup-so-that-we-can-enter-translations-via-the-cloudcannon-gui-additional-languages-can-be-set-in-the-environment-variables-in-cloudcannons-build-configuration:
-  Eine Demonstration, wie Hugo und Rosey in CloudCannon arbeiten. Diese Site
-  verfügt über eine zusätzliche Einrichtung, damit wir Übersetzungen über die
-  CloudCannon-GUI eingeben können. Zusätzliche Sprachen können in den
-  Umgebungsvariablen in der Build-Konfiguration von CloudCannon festgelegt
-  werden.
 hugo-rosey-demo: Hugo Rosey Demo
 keep-what-you-need-delete-the-rest: Behalten Sie, was Sie brauchen. Den Rest löschen.
 make-your-own-copy-of-this-repository-reference-it-or-use-it-as-a-template-to-get-up-and-running-with-translation-workflows-in-cloudcannon-using-rosey: ""
+odCqOyfzfx8+0x9yxU7KiHRnYpNBFRibhMjQTdF6UNI: ""
 read-more: Mehr lesen
 site-title: Hugo Rosey Demo
